--- a/lab-0/lab0.html
+++ b/lab-0/lab0.html
@@ -7,7 +7,18 @@
     </head>
 
     <body>
+        <table border="0">
+            <tbody>
+                <tr>
+                    <td><img src="./lab0_1.png" /></td>
+                    <td><img src="./lab0_1.png" /></td>
+                </tr>
+                <tr>
+                    <td><img src="./lab0_1.png" /></td>
 
+                </tr>
+            </tbody>
+        </table>
     </body>
 
 </html>
