--- a/lab-0/lab0.html
+++ b/lab-0/lab0.html
@@ -15,8 +15,17 @@
                 </tr>
                 <tr>
                     <td><img src="./lab0_1.png" /></td>
-
+                    <td><img src="./lab0_1.png" /></td>
                 </tr>
+                <tr>
+                    <td><img src="./lab0_1.png" /></td>
+                    <td><img src="./lab0_1.png" /></td>
+                </tr>
+                <tr>
+                    <td><img src="./lab0_1.png" /></td>
+                    <td><img src="./lab0_1.png" /></td>
+                </tr>
+
             </tbody>
         </table>
     </body>
