linked the img tags

--- a/lab-0/lab0.html
+++ b/lab-0/lab0.html
@@ -10,20 +10,36 @@
         <table border="0">
             <tbody>
                 <tr>
-                    <td><img src="./lab0_1.png" /></td>
-                    <td><img src="./lab0_1.png" /></td>
+                    <td>
+                        <a href="https://www.github.com"><img src="./lab0_1.png" /></a>
+                    </td>
+                    <td>
+                        <a href="https://www.youtube.com"><img src="./lab0_1.png" /></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><img src="./lab0_1.png" /></td>
-                    <td><img src="./lab0_1.png" /></td>
+                    <td>
+                        <a href="https://www.reddit.com"><img src="./lab0_1.png" /></a>
+                    </td>
+                    <td>
+                        <a href="https://www.facebook.com"><img src="./lab0_1.png" /></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><img src="./lab0_1.png" /></td>
-                    <td><img src="./lab0_1.png" /></td>
+                    <td>
+                        <a href="https://www.google.com"><img src="./lab0_1.png" /></a>
+                    </td>
+                    <td>
+                        <a href="./lab0A.html"><img src="./lab0_1.png" /></a>
+                    </td>
                 </tr>
                 <tr>
-                    <td><img src="./lab0_1.png" /></td>
-                    <td><img src="./lab0_1.png" /></td>
+                    <td>
+                        <a href="./lab0B.html"><img src="./lab0_1.png" /></a>
+                    </td>
+                    <td>
+                        <a href="mailto:bishoy.abdelmalik.856@my.csun.edu"><img src="./lab0_1.png" /></a>
+                    </td>
                 </tr>
 
             </tbody>
