--- a/lab-0/lab0.html
+++ b/lab-0/lab0.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
-        <meta charset=“ utf-8”>
-        <title></title>
+        <meta charset="utf-8">
+        <title>Lab 0</title>
     </head>
 
     <body>
