added some things

--- a/lab-0/lab0.html
+++ b/lab-0/lab0.html
@@ -11,34 +11,34 @@
             <tbody>
                 <tr>
                     <td>
-                        <a href="https://www.github.com"><img src="./lab0_1.png" /></a>
+                        <a href="https://www.github.com"><img src="lab0_1.png" /></a>
                     </td>
                     <td>
-                        <a href="https://www.youtube.com"><img src="./lab0_1.png" /></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="https://www.reddit.com"><img src="./lab0_1.png" /></a>
-                    </td>
-                    <td>
-                        <a href="https://www.facebook.com"><img src="./lab0_1.png" /></a>
+                        <a href="https://www.youtube.com"><img src="lab0_1.png" /></a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a href="https://www.google.com"><img src="./lab0_1.png" /></a>
+                        <a href="https://www.reddit.com"><img src="lab0_1.png" /></a>
                     </td>
                     <td>
-                        <a href="./lab0A.html"><img src="./lab0_1.png" /></a>
+                        <a href="https://www.facebook.com"><img src="lab0_1.png" /></a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a href="./lab0B.html"><img src="./lab0_1.png" /></a>
+                        <a href="https://www.google.com"><img src="lab0_1.png" /></a>
                     </td>
                     <td>
-                        <a href="mailto:bishoy.abdelmalik.856@my.csun.edu"><img src="./lab0_1.png" /></a>
+                        <a href="lab0A.html"><img src="lab0_1.png" /></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="lab0B.html"><img src="lab0_1.png" /></a>
+                    </td>
+                    <td>
+                        <a href="mailto:bishoy.abdelmalik.856@my.csun.edu"><img src="lab0_1.png" /></a>
                     </td>
                 </tr>
 
