--- a/lab-0/lab0A.html
+++ b/lab-0/lab0A.html
@@ -40,7 +40,7 @@
         </form>
         <br/>
         <br/>
-        <a href="./lab0.html">Go back to homepage</a>
+        <a href="lab0.html">Go back to homepage</a>
     </body>
 
 </html>
