--- a/lab-0/lab0B.html
+++ b/lab-0/lab0B.html
@@ -4,10 +4,72 @@
     <head>
         <meta charset="utf-8">
         <title>Lab 0B</title>
-        <link rel="stylesheet" href="./lab0B.css">
+        <link rel="stylesheet" href="lab0B.css">
     </head>
 
     <body>
+        <div class="main-box">
+            <div class="title-box">
+                <h1>Bishoy's Tech Tips</h1>
+                <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+            </div>
+            <section>
+                <div class="friends-box">
+                    <h2>Friends</h2>
+                    <ul>
+                        <li>Lorem ipsum dolor</li>
+                        <li>Lorem ipsum dolor</li>
+                        <li>Lorem ipsum dolor</li>
+                    </ul>
+                </div>
+                <div class="blog-posts-box">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit,
+                    numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam
+                    maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid
+                    distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi
+                    perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum
+                    architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum
+                    repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea
+                    quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisLorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+                    velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam
+                    quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse
+                    aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio
+                    quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis
+                    dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto
+                    nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae
+                    ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisLorem
+                    ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit,
+                    numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam
+                    maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid
+                    distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi
+                    perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum
+                    architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum
+                    repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea
+                    quisLorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
+                    velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam
+                    quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse
+                    aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio
+                    quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis
+                    dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto
+                    nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae
+                    ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam
+                    tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt
+                    et quas.
+                </div>
+            </section>
+
+        </div>
 
     </body>
 
