switched section to div

--- a/lab-0/lab0B.html
+++ b/lab-0/lab0B.html
@@ -13,7 +13,7 @@
                 <h1>Bishoy's Tech Tips</h1>
                 <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
             </div>
-            <section>
+            <div class="remove-border main-content">
                 <div class="friends-box">
                     <h2>Friends</h2>
                     <ul>
@@ -67,7 +67,7 @@
                     tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt
                     et quas.
                 </div>
-            </section>
+            </div>
 
         </div>
 
