--- a/lab-0/lab0B.html
+++ b/lab-0/lab0B.html
@@ -22,7 +22,7 @@
                         <li>Lorem ipsum dolor</li>
                     </ul>
                 </div>
-                <div class="blog-posts-box">
+                <div class="blog-posts-box remove-border">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Voluptatem velit, numquam quam maxime esse aliquid distinctio quasi perferendis dolorum architecto nostrum repudiandae ea quisquam ullam tempore ab sunt et quas.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem velit,
