--- a/lab-0/lab0.html
+++ b/lab-0/lab0.html
@@ -4,41 +4,50 @@
     <head>
         <meta charset="utf-8">
         <title>Lab 0</title>
+        <style>
+            img {
+                display: block;
+            }
+            
+            table {
+                margin: auto;
+            }
+        </style>
     </head>
 
     <body>
-        <table border="0">
+        <table border="0" cellpadding="0" cellspacing="0">
             <tbody>
                 <tr>
                     <td>
-                        <a href="https://www.github.com"><img src="lab0_1.png" /></a>
+                        <a href="https://www.github.com"><img src="lab0_1.jpg" /></a>
                     </td>
                     <td>
-                        <a href="https://www.youtube.com"><img src="lab0_1.png" /></a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a href="https://www.reddit.com"><img src="lab0_1.png" /></a>
-                    </td>
-                    <td>
-                        <a href="https://www.facebook.com"><img src="lab0_1.png" /></a>
+                        <a href="https://www.youtube.com"><img src="lab0_2.jpg" /></a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a href="https://www.google.com"><img src="lab0_1.png" /></a>
+                        <a href="https://www.reddit.com"><img src="lab0_3.jpg" /></a>
                     </td>
                     <td>
-                        <a href="lab0A.html"><img src="lab0_1.png" /></a>
+                        <a href="https://www.facebook.com"><img src="lab0_4.jpg" /></a>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <a href="lab0B.html"><img src="lab0_1.png" /></a>
+                        <a href="https://www.google.com"><img src="lab0_5.jpg" /></a>
                     </td>
                     <td>
-                        <a href="mailto:bishoy.abdelmalik.856@my.csun.edu"><img src="lab0_1.png" /></a>
+                        <a href="lab0A.html"><img src="lab0_6.jpg" /></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <a href="lab0B.html"><img src="lab0_7.jpg" /></a>
+                    </td>
+                    <td>
+                        <a href="mailto:bishoy.abdelmalik.856@my.csun.edu"><img src="lab0_8.jpg" /></a>
                     </td>
                 </tr>
 
