--- a/lab-0/lab0A.html
+++ b/lab-0/lab0A.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Bishoy Abdelmalik</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam adipisci repudiandae a itaque ea, ex fugit sint iusto ipsa sequi voluptate ab, perspiciatis quidem facilis! Reiciendis quos consequuntur doloribus a.</p>
+        <p>I am a computer science student at California State University Northridge. I joined CSUN to learn more about computer science theory and to learn skills to become a software engineer. I like to learn programming and explore new technologies.</p>
         <h2><strong><u>My classes in Spring 2020 and Fall 2020: </u></strong></h2>
         <ul>
             <li>Mathematics
