--- a/lab-0/lab0B.html
+++ b/lab-0/lab0B.html
@@ -27,9 +27,7 @@
                         <img src="MS.jpg" class="float-right" />
                         <div class="remove-border">
                             <p>
-                                A vulnerability Microsoft has already fixed in an urgent security update this week is wreaking havoc on businesses, and has caught the attention of the White House. On March 2, Microsoft released an emergency security update for its Microsoft Exchange
-                                email and communications software, patching a security hole in versions of the software going back to 2013. But as customers slowly update their systems, there are signs that at least 30,000 organizations across the US
-                                have already been hit by hackers who stole email communications from their systems. The attacks, which were reported by security expert Brian Krebs on Friday, have hit infectious-disease researchers, law firms, defense
+                                A vulnerability Microsoft has already fixed in an urgent security update this week is wreaking havoc on businesses, and has caught the attention of the White House. On March 2, Microsoft released an emergency security update for its Microsoft Exchange email and communications software, patching a security hole in versions of the software going back to 2013. But as customers slowly update their systems, there are signs that at least 30,000 organizations across the US have already been hit by hackers who stole email communications from their systems. The attacks, which were reported by security expert Brian Krebs on Friday, have hit infectious-disease researchers, law firms, defense
                                 contractors, higher education institutions and nongovernmental organizations. Krebs said the researchers who identified the flaw had seen attackers exploiting the vulnerability two months ago.Microsoft said it's working
                                 with the US government to provide guidance for its customers. "The best protection is to apply updates as soon as possible across all impacted systems," Microsoft said in a statement to Krebs. "We continue to help customers
                                 by providing additional investigation and mitigation guidance. Impacted customers should contact our support teams for additional help and resources." Microsoft didn't immediately respond to a request for comment. Some
@@ -46,7 +44,9 @@
                         <h2>02/28/2021: Best monitor under $200 you can get for 2021</h2>
                         <img src="monitor.jpg" class="float-right" />
                         <div class="remove-border">
-                            A second (or third) monitor can make working from home much more productive. You don't have to pay much to get a decent one from Dell, LG, BenQ or others ASAP.<br>
+                            <p>
+                                A second (or third) monitor can make working from home much more productive. You don't have to pay much to get a decent one from Dell, LG, BenQ or others ASAP.
+                            </p>
                             <ul>
                                 <li>LG 27ML600M-B 27-inch FHD IPS FreeSync display</li>
                                 <li>Dell SE2719HR 27-inch FHD IPS FreeSync display</li>
@@ -56,14 +56,10 @@
 
                             </ul>
                             <p>
-
-                                If you've suddenly found yourself on a tight budget, you can still find a decent screen among our picks for the best monitors under $200. But act fast if you find a cheap monitor you want -- they're going in and out of stock like crazy, thanks to so many
-                                people now working from home.
+                                If you've suddenly found yourself on a tight budget, you can still find a decent screen among our picks for the best monitors under $200. But act fast if you find a cheap monitor you want -- they're going in and out of stock like crazy, thanks to so many people now working from home.
                             </p>
                             <p>
-                                When buying a budget monitor, you should absolutely check out the listing of what's in the box. Make sure that it's not missing items that would drive the price above that threshold, like a stand or appropriate cables. The stand might not be an issue
-                                if you're planning to use the VESA mount to put it on a wall or arm. But in that case, you should ensure the mount screws on the back of the monitor match yours: The bulk of these have 100-by-100-mm mounts, though in some
-                                cases, they don't support a VESA mount at all.
+                                When buying a budget monitor, you should absolutely check out the listing of what's in the box. Make sure that it's not missing items that would drive the price above that threshold, like a stand or appropriate cables. The stand might not be an issue if you're planning to use the VESA mount to put it on a wall or arm. But in that case, you should ensure the mount screws on the back of the monitor match yours: The bulk of these have 100-by-100-mm mounts, though in some cases, they don't support a VESA mount at all.
                             </p>
                             <p>
                                 Unless you're a hardcore gamer or creative professional, many of the most technical specs -- color gamut and latency, for example -- won't really matter to you. You should always take them with a grain of salt, anyway.
@@ -82,27 +78,21 @@
                                 to decide what to do with your old one. Sure, you could sell or trade in your previous device (or those other phones you found in a drawer) but it's not the only approach.
                             </p>
                             <p>
-                                After all, smartphones are small, powerful computers with storage space and a camera. Your phone makes a handy substitute for lots of other electronics -- you can even turn it into a home security camera or diagnose your car's mechanical problems. Read
-                                on!
+                                After all, smartphones are small, powerful computers with storage space and a camera. Your phone makes a handy substitute for lots of other electronics -- you can even turn it into a home security camera or diagnose your car's mechanical problems. Read on!
                             </p>
 
                             <p>
-                                Turn your old Android into a webcam<br> Now is a great time to turn your old phone into a webcam. You can use a number of free apps -- including Zoom or Skype -- to improve the quality of your video chats during quarantine.
-                                Getting started is easy, and we give you all the tips you need for a top-notch setup. Remember, even an older phone's main camera could still be better than your laptop's built-in webcam -- or no webcam at all.
+                                Turn your old Android into a webcam<br> Now is a great time to turn your old phone into a webcam. You can use a number of free apps -- including Zoom or Skype -- to improve the quality of your video chats during quarantine. Getting started is easy, and we give you all the tips you need for a top-notch setup. Remember, even an older phone's main camera could still be better than your laptop's built-in webcam -- or no webcam at all.
                             </p>
 
                             <p>
-                                Convert your old Android into a Nintendo Game Boy<br>You can play video games everywhere you go when you turn your Android into a Nintendo Game Boy. All you need to get started is a compatible Android phone and a Hyperkin
-                                Smartboy Mobile Device.
+                                Convert your old Android into a Nintendo Game Boy<br>You can play video games everywhere you go when you turn your Android into a Nintendo Game Boy. All you need to get started is a compatible Android phone and a Hyperkin Smartboy Mobile Device.
                             </p>
                             <p>
-                                Store your photos on the old phone<br>You can also use your old phone as a camera and take it places you normally wouldn't want to take your new phone. For example, if you go to the lake or beach, you can take photos without
-                                worrying as much about dropping your phone in the water.
+                                Store your photos on the old phone<br>You can also use your old phone as a camera and take it places you normally wouldn't want to take your new phone. For example, if you go to the lake or beach, you can take photos without worrying as much about dropping your phone in the water.
                             </p>
                             <p>
-                                Use your Android as a universal remote<br>It's great having one remote that can do everything -- think Click, the Adam Sandler movie. OK, maybe not that extreme. But being able to control all of your devices from one remote
-                                is a relief. Download a remote control app, such as iRule and then sync your phone to devices including your Xbox One, Roku and Apple TV. If you have smart light bulbs, you can sync your phone to those as well. Follow these
-                                tips on how to turn your device into a universal remote so you never have to wonder where your TV remote is hiding again.
+                                Use your Android as a universal remote<br>It's great having one remote that can do everything -- think Click, the Adam Sandler movie. OK, maybe not that extreme. But being able to control all of your devices from one remote is a relief. Download a remote control app, such as i Rule and then sync your phone to devices including your Xbox One, Roku and Apple TV. If you have smart light bulbs, you can sync your phone to those as well. Follow these tips on how to turn your device into a universal remote so you never have to wonder where your TV remote is hiding again.
                             </p>
                             <p>
                                 Turn your Android phone into a Google Home<br>Repurposing your Android phone to be a Google Home smart speaker is simple and requires no app downloads. Make sure your phone is updated to the latest Android OS so you have
@@ -110,24 +100,16 @@
                                 have to spend $129 on a Google Home. Learn more about what you can do with a Google Home here.
                             </p>
                             <p>
-                                Your Android can double as a home security camera<br>Feel secure by turning your old phone into a home security camera. Download a security camera app, like Alfred (can also use with iPhone) to get started. Check on your
-                                house while you're at work to make sure all is well. Place the phone in the main room of the house in a spot where you have the best view. When you're home, set it up outside (hidden, of course) to see who's knocking on
-                                your door or to see any suspicious activity. Maybe you'll find it's just a raccoon that's been leaving candy wrappers in your yard and not your neighbor's kid.
+                                Your Android can double as a home security camera<br>Feel secure by turning your old phone into a home security camera. Download a security camera app, like Alfred (can also use with iPhone) to get started. Check on your house while you're at work to make sure all is well. Place the phone in the main room of the house in a spot where you have the best view. When you're home, set it up outside (hidden, of course) to see who's knocking on your door or to see any suspicious activity. Maybe you'll find it's just a raccoon that's been leaving candy wrappers in your yard and not your neighbor's kid.
                             </p>
                             <p>
-                                Use your old phone as a baby monitor<br>Instead of running into your child's room every time you think you hear crying or a strange noise, check to see if your baby is OK by turning your old phone into a baby monitor. You
-                                can set your old phone up in the room and access it from your current phone by installing Skype on both devices. You can also use a baby monitor app like Dormi. We haven't tested them on real babies, but the customer ratings
-                                are excellent. You'll feel better knowing that you can be in any room and still see your baby.
+                                Use your old phone as a baby monitor<br>Instead of running into your child's room every time you think you hear crying or a strange noise, check to see if your baby is OK by turning your old phone into a baby monitor. You can set your old phone up in the room and access it from your current phone by installing Skype on both devices. You can also use a baby monitor app like Dormi. We haven't tested them on real babies, but the customer ratings are excellent. You'll feel better knowing that you can be in any room and still see your baby.
                             </p>
                             <p>
-                                Turn your Android into a wireless mouse<br>It can be annoying when your wireless mouse dies on you with no warning. It helps to have a backup, and you can turn your phone into a mouse in no time. You'll need to download
-                                an app, such as Remote Mouse, in order to do so. Once you have the app, connect your phone and desktop to the same Wi-Fi network and say bye-bye to that old-school mouse. Keep it in your laptop case for when you're on the
-                                go and stop by a coffee shop to get some work done.
+                                Turn your Android into a wireless mouse<br>It can be annoying when your wireless mouse dies on you with no warning. It helps to have a backup, and you can turn your phone into a mouse in no time. You'll need to download an app, such as Remote Mouse, in order to do so. Once you have the app, connect your phone and desktop to the same Wi-Fi network and say bye-bye to that old-school mouse. Keep it in your laptop case for when you're on the go and stop by a coffee shop to get some work done.
                             </p>
                             <p>
-                                Keep your old phone as a music player<br>Free up storage space on your new phone by using your old phone as a media player. Since you have a new phone, you can wipe all the data off your old phone (except your music and
-                                music apps). You'll be able to add as many songs as your old phone will allow without worrying about how much storage you're using. Hook it up to your surround-sound speaker if you're having a party and let the fun begin.
-                                The great thing is you'll be able to leave it in one place and won't have to worry about incoming calls and messages interrupting your tunes. <a href="https://www.cnet.com/how-to/9-ingenious-ways-to-give-your-old-android-phone-new-life/">(Source)</a>
+                                Keep your old phone as a music player<br>Free up storage space on your new phone by using your old phone as a media player. Since you have a new phone, you can wipe all the data off your old phone (except your music and music apps). You'll be able to add as many songs as your old phone will allow without worrying about how much storage you're using. Hook it up to your surround-sound speaker if you're having a party and let the fun begin. The great thing is you'll be able to leave it in one place and won't have to worry about incoming calls and messages interrupting your tunes. <a href="https://www.cnet.com/how-to/9-ingenious-ways-to-give-your-old-android-phone-new-life/">(Source)</a>
                             </p>
                         </div>
                         <div class="remove-border float-clear"></div>
