--- a/lab1/lab1.html
+++ b/lab1/lab1.html
@@ -2,23 +2,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>form</title>
-        <script>
-            window.addEventListener("load", () => {
-                console.log("loaded");
-            });
-        </script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>form</title>
+    <script>
+        window.addEventListener("load", () => {
+            console.log("loaded");
+        });
+    </script>
+</head>
 
-    <body>
-        <form>
-            <input>
-        </form>
+<body>
+    <form>
+        <div>
+            <label for="username">Username:</label><br/>
+            <input type="text" name="username" id="username">
+        </div>
+        <div>
+            <label for="password">Password:</label><br/>
+            <input type="password" name="password" id="password">
+        </div>
+        <div>
+            <label for="id">Student ID:</label><br/>
+            <input type="text" name="id" id="id">
+        </div>
+        <div>
+            <label for="msg">Message:</label><br/>
+            <textarea name="msg" id="msg" cols="20" rows="5"></textarea>
+            <p><span id="words">25</span> words left</p>
+        </div>
+        <button id="submit">Submit</button>
+    </form>
 
-    </body>
+</body>
 
 </html>
